logs/spiderosm.log
Listing '.'...
Listing './bin'...
Compiling './bin/spiderosm_berkeley.py'...
Compiling './bin/spiderosm_portland.py'...
Compiling './bin/spiderosm_test.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Shapely-1.6.3.dist-info'...
Listing './lib/python3.5/site-packages/geojson'...
Listing './lib/python3.5/site-packages/geojson-2.3.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pylev-1.3.0.dist-info'...
Listing './lib/python3.5/site-packages/pyproj'...
Listing './lib/python3.5/site-packages/pyproj/data'...
Listing './lib/python3.5/site-packages/pyproj-1.9.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pyshp-1.2.12.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/shapely'...
Listing './lib/python3.5/site-packages/shapely/.libs'...
Listing './lib/python3.5/site-packages/shapely/algorithms'...
Listing './lib/python3.5/site-packages/shapely/examples'...
Listing './lib/python3.5/site-packages/shapely/geometry'...
Listing './lib/python3.5/site-packages/shapely/speedups'...
Listing './lib/python3.5/site-packages/shapely/vectorized'...
Listing './lib/python3.5/site-packages/spiderosm'...
Listing './lib/python3.5/site-packages/spiderosm/bin'...
Compiling './lib/python3.5/site-packages/spiderosm/bins.py'...
***   File "./lib/python3.5/site-packages/spiderosm/bins.py", line 59
    print 'bins PASS'
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spiderosm/cannames.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (cannames.py, line 532)
Compiling './lib/python3.5/site-packages/spiderosm/centerline.py'...
***   File "./lib/python3.5/site-packages/spiderosm/centerline.py", line 218
    print 'centerline PASS'
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spiderosm/colspecs.py'...
***   File "./lib/python3.5/site-packages/spiderosm/colspecs.py", line 107
    print "colspecs PASS"
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spiderosm/config.py'...
***   File "./lib/python3.5/site-packages/spiderosm/config.py", line 72
    print 'config PASS'
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spiderosm/csvif.py'...
***   File "./lib/python3.5/site-packages/spiderosm/csvif.py", line 201
    print "csvif PASS"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spiderosm/dbinterface.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (dbinterface.py, line 33)
Compiling './lib/python3.5/site-packages/spiderosm/geo.py'...
***   File "./lib/python3.5/site-packages/spiderosm/geo.py", line 347
    print 'wkt_in:', wkt_in
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spiderosm/geofeatures.py'...
***   File "./lib/python3.5/site-packages/spiderosm/geofeatures.py", line 273
    print 'geofeatures PASS'
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spiderosm/log.py'...
***   File "./lib/python3.5/site-packages/spiderosm/log.py", line 17
    print 'log PASS'
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spiderosm/match.py'...
***   File "./lib/python3.5/site-packages/spiderosm/match.py", line 403
    print '%d (RAW) NAME FIXES' % len(fixes)
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/spiderosm/misc.py'...
***   File "./lib/python3.5/site-packages/spiderosm/misc.py", line 26
    print s,
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spiderosm/osm.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (osm.py, line 46)
Compiling './lib/python3.5/site-packages/spiderosm/osmparser.py'...
***   File "./lib/python3.5/site-packages/spiderosm/osmparser.py", line 128
    print 'osmparser PASS'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spiderosm/pnwk.py'...
***   File "./lib/python3.5/site-packages/spiderosm/pnwk.py", line 22
    print 'pnwk PASS'
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spiderosm/pnwk_match.py'...
***   File "./lib/python3.5/site-packages/spiderosm/pnwk_match.py", line 71
    print '===== new segs matches: %d, total seg matches: %d' % (
                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/spiderosm/pnwk_matchjcts.py'...
***   File "./lib/python3.5/site-packages/spiderosm/pnwk_matchjcts.py", line 142
    print 'pnwk_matchjcts PASS'
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spiderosm/pnwk_matchspokes.py'...
***   File "./lib/python3.5/site-packages/spiderosm/pnwk_matchspokes.py", line 27
    print 'pass %d, processing %d matched junctions:' % (passNum, len(new_jct_matches))
                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/spiderosm/pnwk_namespace.py'...
***   File "./lib/python3.5/site-packages/spiderosm/pnwk_namespace.py", line 56
    print 'pnwk_namespace PASS'
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spiderosm/pnwk_network.py'...
***   File "./lib/python3.5/site-packages/spiderosm/pnwk_network.py", line 51
    print "Unrecognized units:", units
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spiderosm/pnwk_score.py'...
***   File "./lib/python3.5/site-packages/spiderosm/pnwk_score.py", line 126
    print 'pnwk_score PASS'
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spiderosm/postgis.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (postgis.py, line 38)
Compiling './lib/python3.5/site-packages/spiderosm/shp2geojson.py'...
***   File "./lib/python3.5/site-packages/spiderosm/shp2geojson.py", line 45
    print 'shp2geojson PASS'
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/spiderosm/spatialite.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (spatialite.py, line 31)
Listing './lib/python3.5/site-packages/spiderosm/test_data'...
Listing './lib/python3.5/site-packages/spiderosm/test_data/input'...
Listing './lib/python3.5/site-packages/spiderosm/test_data/input/ucb_sw'...
Listing './lib/python3.5/site-packages/spiderosm-0.4.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
